fix overflow hiden to the parent of items

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -590,7 +590,7 @@ fieldset {
   flex-direction: column;
   margin: 20px 15px;
   row-gap: 13px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .menuRestaurants .main .card__overlay .entrees .title-entree {
   text-transform: uppercase;
