--- a/src/styles/scss/pages/_menusRestaurants.scss
+++ b/src/styles/scss/pages/_menusRestaurants.scss
@@ -88,7 +88,7 @@
                     flex-direction: column;
                     margin: 20px 15px;
                     row-gap: 13px;
-                    overflow-x: hidden;
+                    overflow: hidden;
 
                     .title-entree {
                         text-transform: uppercase;
